--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -64,10 +64,8 @@
                             </div>
                             <!-- -->
                             <div class="text_block">
-                                <div class="text_title">Мы готовы доставить Ваш полис в любую точку Украины.</div>
-                                <p class="bold"><span></span>По Киеву у нас работают курьеры-консультанты, которые доставят Ваш полис в удобное для вас время.</p>
-                                <p class="bold"><span></span>По Украине мы отправим Вам полис с помощью службы “Новая почта” за свой счет.</p>
-                                <p>Стоимость доставки для Вас - <b>БЕСПЛАТНО!</b></p>
+                                <div class="text_title">У нас работают курьеры-консультанты, которые доставят ваши договора в удобное для Вас время в пределах Киева, а также проконсультируют по любым интересующим Вас вопросам.</div>
+                                <p class="bold"><span></span>Стоимость доставки для Вас - <b>БЕСПЛАТНО!</b></p>
                             </div>
                             <!-- -->
                             <div class="line adres">
@@ -77,7 +75,7 @@
                             </div>
                             <!-- -->
                             <div class="line adres_fields" style="display: none;">
-                                <div class="combo one_column">
+                                <!--<div class="combo one_column">
                                     <div class="current">Киевская область{# if app.session.get('region') %}
                                         {% for region in regions%} {% if region.id == app.session.get('region')%}{{region.value}}{% endif %}{% endfor %}{% else %}Выбрать область{% endif #}</div>
                                     <div class="arrow"></div>
@@ -115,7 +113,7 @@
                                 	</div>
                                     <input type="text" value="908{#app.session.get('city')#}" name="deliveryCity" id="deliveryCity"/>
                                 </div>
-                                <div style="clear: both;"></div>
+                                <div style="clear: both;"></div>-->
                                 <div class="control_point size4">
                                     <input type="text" placeholder="Улица" name="deliveryAddress" id="deliveryAddress" value="{{ deliveryAddress }}"/>
                                     <div class="success ico"></div>
