--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -417,9 +417,8 @@ $(function() {
                                         Страхование здоровья водителя и пассажиров
                                         <div class="question_ico">
                                           <div class="pop_up">
-                                            <div class="popup_title">Lorem ipsum dolor sit amet</div>
-                                            Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                                            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+                                            <div class="popup_title">Личная безопастность</div>
+                                            Вы можете застраховать собственную жизнь и здоровье, а также жизнь и здоровье Ваших пассажиров от несчастных случаев в результате ДТП.
                                           </div>
                                         </div>
                                     </label>
