--- a/path/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,5 +1,5 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-<p>{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</p>
+<div class="error_login">{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</div>
 {% endblock fos_user_content %}
