--- a/path/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -1,7 +1,7 @@
 <form class="modal_form fos_user_resetting_reset" action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="fos_user_resetting_request">
     <div>
         {% if invalid_username is defined %}
-            <p>{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}, 'FOSUserBundle') }}</p>
+            <div class="error_login">{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}, 'FOSUserBundle') }}</div>
         {% endif %}
         <div class="control_point">
         <input type="text" id="username" name="username" required="required" placeholder="Введите e-mail адрес"/>
