--- a/path/src/Insurance/ContentBundle/Resources/public/css/modals.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/modals.css
@@ -19,7 +19,7 @@
     padding: 0 20px;
     color:#000;
     font-size:21px;
-    font-family:"robotoBold", Arial Black, Arial, Helvetica, sans-serif;
+    font-family:"robotoBold", Arial, Helvetica, sans-serif;
     position: relative;
     margin-bottom:25px;
 }
