--- a/path/src/Insurance/ContentBundle/Resources/public/css/reset.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/reset.css
@@ -14,6 +14,18 @@
 }*/
 
 @font-face {
+    font-family: 'arialblack';
+    src: url('../fonts/ariblk-webfont.eot');
+    src: url('../fonts/ariblk-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ariblk-webfont.woff') format('woff'),
+         url('../fonts/ariblk-webfont.ttf') format('truetype'),
+         url('../fonts/ariblk-webfont.svg#arialblack') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
     font-family: 'robotoblack';
     src: url('../fonts/roboto-black-webfont.eot');
     src: url('../fonts/roboto-black-webfont.eot?#iefix') format('embedded-opentype'),
@@ -24,9 +36,6 @@
     font-style: normal;
 
 }
-
-
-
 
 @font-face {
     font-family: 'robotobold';
