--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -68,9 +68,9 @@
             	<a href="{{path('insurance_content_homepage')}}" class="logo"></a>
                 <div class="center_part">
                     <span class="phone_ico"></span>
-                    <div class="phone_number"><span class="code">(050)</span>345 2415<span class="hours24 pass_link"></span></div>
-                    <div class="grey_button call_me call_link"><span></span>Перезвоните мне</div>
-                    <div class="grey_button write_in_skype"><span></span>Написать в Skype</div>
+                    <div class="phone_number"><span class="code">066</span>931 0606 <!-- <span class="hours24">24/7</span>--></div>
+                    <div class="grey_button call_me call_link"><!-- <span></span>-->заказать звонок</div>
+                    <!-- <div class="grey_button write_in_skype"><span></span>Написать в Skype</div>-->
                     <div style="clear: both;"></div>
                 </div>
                 <div class="login-area">
