translations file added, timer fixed, request password text added to form

--- a/path/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -1,3 +1,4 @@
+<div class="sub_text">Введите e-mail адрес, указанный при регистрации, на него будет выслана информация по восстановлению пароля.</div>
 <form class="modal_form fos_user_resetting_reset" action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="fos_user_resetting_request">
 
         {% if invalid_username is defined %}
