--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -67,6 +67,7 @@
         	<div class="limit">
             	<a href="{{path('insurance_content_homepage')}}" class="logo"></a>
                 <div class="center_part">
+				    <span class="over24h">Круглосуточно</span>
                     <span class="phone_ico"></span>
                     <div class="phone_number"><span class="code">066</span>931 0606 <!-- <span class="hours24">24/7</span>--></div>
                     <div class="grey_button call_me call_link"><!-- <span></span>-->заказать звонок</div>
